--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,10 @@
-
+version: "3.2"
+   
+services:
+  app:
+    build: .
+    command: streamlit run app.py
+    volumes: 
+        - ./:/usr/app/
+    ports:
+      - "8501:8501"
